# EulerOperations

./: .gitignore  CMakeLists.txt
config/: ConfGen.py  test.conf
src/: CMakeLists.txt  main.cpp
src/model/: cEulerObj.cpp  cEulerObj.hpp  cEulerTools.hpp  cEulerWorld.cpp  cEulerWorld.hpp
src/renders/: cBaseRender.cpp  cBaseRender.hpp  cBaseShader.cpp  cBaseShader.hpp  cEulerRender.cpp  cEulerRender.hpp
src/renders/camera/: Camera.cpp  Camera.h
src/renders/renderobj/: cBaseRenderObj.cpp  cBaseRenderObj.h
src/scenes/: cDrawScene.cpp  cDrawScene.hpp  cEulerScene.cpp  cEulerScene.hpp  cScene.cpp  cScene.hpp
src/shaders/: fragment.glsl  vertex.glsl
